# mos

./: .gitignore  CMakeLists.txt  README.md
bootloader/: CMakeLists.txt  README.md  gpt.h  main.c  util.c  util.h
common/: version.h.in
